<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.asus.strokeanalyzer.View.ResultsFragment"
    tools:showIn="@layout/fragment_results"
    android:layout_gravity="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:text="@string/nihss"
            style="@style/ResultText"/>

        <TextView
            android:id="@+id/nihssSum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_result_text"
            style="@style/StandardText"/>

        <TextView
            android:text="@string/stroke_bricks"
            style="@style/ResultText"/>

        <TextView
            android:id="@+id/sbDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_result_text"
            style="@style/StandardText"/>

        <Button
            android:id="@+id/CTPicutresBt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/view_ct_pictures"
            style="@style/DialogButton"/>

        <TextView
            android:text="@string/treatment_decision"
            style="@style/ResultText"/>

        <TextView
            android:id="@+id/treatmentDecision"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_result_text"
            style="@style/StandardText"/>

        <TextView
            android:text="@string/wrong_answers_text"
            style="@style/SubresultText"/>

        <TextView
            android:id="@+id/wrongAnswers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_result_text"
            style="@style/StandardText"/>

        <TextView
            android:text="@string/hat_scale"
            style="@style/ResultText"/>

        <TextView
            android:text="@string/score_text"
            style="@style/SubresultText"/>

        <TextView
            android:id="@+id/hatScore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_result_text"
            style="@style/StandardText"/>

        <TextView
            android:text="@string/hat_symptomaticICH_text"
            style="@style/SubresultText"/>

        <TextView
            android:id="@+id/hatSymptomaticICH"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_result_text"
            style="@style/StandardText"/>

        <TextView
            android:text="@string/hat_fatalICH_text"
            style="@style/SubresultText"/>

        <TextView
            android:id="@+id/hatFatalICH"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_result_text"
            style="@style/StandardText"/>

        <TextView
            android:text="@string/dragon_scale"
            style="@style/ResultText"/>

        <TextView
            android:text="@string/score_text"
            style="@style/SubresultText"/>

        <TextView
            android:id="@+id/dragonScore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_result_text"
            style="@style/StandardText"/>

        <TextView
            android:text="@string/dragon_good_outcome_text"
            style="@style/SubresultText"/>

        <TextView
            android:id="@+id/dragonGoodOutcomePrognosis"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_result_text"
            style="@style/StandardText"/>

        <TextView
            android:text="@string/dragon_miserable_outcome_text"
            style="@style/SubresultText"/>

        <TextView
            android:id="@+id/dragonMiserableOutcomePrognosis"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_result_text"
            style="@style/StandardText"/>

        <TextView
            android:text="@string/iscore_scale"
            style="@style/ResultText"/>

        <TextView
            android:text="@string/iscore_30days"
            style="@style/SubresultText"/>

        <TextView
            android:id="@+id/iscore30Days"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_result_text"
            style="@style/StandardText"/>

        <TextView
            android:text="@string/iscore_1year"
            style="@style/SubresultText"/>

        <TextView
            android:id="@+id/iscore1Year"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_result_text"
            style="@style/StandardText"/>

    </LinearLayout>

</android.support.v4.widget.NestedScrollView>
